bugfix: horizontal scroll

--- a/gamecup/src/index.css
+++ b/gamecup/src/index.css
@@ -1,3 +1,9 @@
+#root {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 .collapsable-title::before {
     content: "▼";
     display: inline-block;
